--- a/app/src/main/res/layout/activity_recycler_view.xml
+++ b/app/src/main/res/layout/activity_recycler_view.xml
@@ -8,7 +8,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layoutAnimation="@anim/item_animation_layout"
         app:layout_constraintTop_toTopOf="parent"
